Large default heap size does not allow to use zero based compressed oops.

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs19
    • Affects Version/s: hs19
    • Component/s: hotspot
    • None
    • b07
    • sparc
    • solaris_10
    • Verified

        For 64 bit VM the default heap size is set to 1/4 of available physical memory. With memory > 120Gb the default heap size would be set to about 30Gb when compressed oops are used. It is fine for regular compressed oops but a little big for zero based compressed oops since lower part of virtual memory is used by os.

              Assignee:
              Vladimir Kozlov
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: