6984368: Large default heap size does not allow to use zero based compressed oops

Take into account HeapBaseMinAddress and round down MaxPermSize

Reviewed-by: never